# remy

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  railway.json  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml  modal-preview.yml
apps/api/: .env.example  Dockerfile  README.md  package.json  railway.toml  tsconfig.json  vitest.config.ts
apps/api/prisma/: schema.prisma  seed.ts
apps/api/scripts/: grant-credits.ts  stripe-sync.ts
apps/api/src/: context.ts  cron.ts  db.ts  env.ts  logger.ts  redis.ts  server.ts  supabase.ts
apps/api/test/: credits.test.ts  env.test.ts  (+2 more)
apps/web/: .env.example  README.md  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
docs/: pricing.md  runbook.md
docs/adr/: 0001-monorepo-structure.md  0002-claude-design-system.md  0003-modal-for-gpu.md
infra/docker/: compose.dev.yml
scripts/: bootstrap.sh
services/ai/: .env.example  Dockerfile  Dockerfile.stub  README.md  pyproject.toml  railway.toml
services/ai/app/: api_client.py  logging_config.py  main.py  modal_client.py  models.py  pipelines.py  preprocess.py  prompts.py  settings.py  shared.py  storage.py  tiktok.py
services/ai/scripts/: comfy_stub.py
services/ai/tests/: conftest.py  test_pipelines.py  test_prompts.py  test_tiktok.py
services/modal/: README.md  app.py
supabase/: config.toml
supabase/migrations/: 20260420000100_seed_buckets.sql  20260420000200_app_schema.sql
(+91 files in other folders)
